@@ -7,6 +7,9 @@ CHANGES
 * Reduce dependency on ``zope.app.*`` packages
 * Allow advisors to view person info (https://launchpad.net/bugs/513064)
 * Flag to disable mail server (https://bugs.launchpad.net/schooltool/+bug/513026)
+* Added action to send emails to student contacts
+  (https://bugs.launchpad.net/schooltool/+bug/496255)
+
 
 1.3.0 (2010-01-06)
 ==================
